--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <title>First</title>
 </head>
 <body>
-    Hello , world ..
-    login form;
-    also added signup
+    Changed for future.
 </body>
 </html>
